# agentic-automation

./: README.md
AgnoExamples/: .env  video_analysis.py
CrewAIExamples/memory_example/: README.md  pyproject.toml  report.md
CrewAIExamples/memory_example/src/memory_example/: crew.py  main.py
CrewAIExamples/memory_example/src/memory_example/config/: agents.yaml  tasks.yaml
CrewAIExamples/meta_quest_knowledge/: pyproject.toml
CrewAIExamples/meta_quest_knowledge/src/meta_quest_knowledge/: main.py
CrewAIExamples/meta_quest_knowledge/src/meta_quest_knowledge/config/: agents.yaml
