[project]
name = "memory_example"
version = "0.1.0"
description = "memory_example using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
memory_example = "memory_example.main:run"
run_crew = "memory_example.main:run"
train = "memory_example.main:train"
replay = "memory_example.main:replay"
test = "memory_example.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
